# supersql

./: .gitignore  LICENSE.md  README.md  pyproject.toml  setup.py
supersql/: __init__.py  column.py  constants.py  core.py  helpers.py  query.py  results.py  table.py
tests/: test_column.py  test_query.py  test_supersql.py  test_table.py
